welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:4: error: illegal start of simple pattern
for(var i <- 1 to 8) {
    ^Runner:13: error: '<-' expected but '}' found.
	}
        ^