welcome.lessons.welcome.loopfor.LoopStairs.scala.code
forward(); forward(); forward();

for(var i <- 1 to 8) {
	left();
	forward();
	right();
	forward();
}

forward(); forward(); forward();